--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -9,7 +9,7 @@ appTitle=Liste des données articles avec unités variables
 appDescription=A Fiori application.
 #XTIT: Main view title
 title=Liste des données articles avec unités variables
-
+titleTable=Données article
 #Nomination des colonnes
 Division=Divison
 Article=Article
