--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -38,3 +38,4 @@ CdeAch=Document d'achat
 
 #Excel
 para=Le rapport a été généré suite aux critères suivants :
+errMsg=L'article ou le groupe de marchandises doit être saisi pour procéder au lancement du rapport.
