--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -35,7 +35,7 @@ ZClient=Client
 NomClient=Nom du client
 Fournisseur=Fournisseur
 CdeAch=Document d'achat
-
+LotExt=Lot d’entreposage externe 
 #Excel
 para=Le rapport a été généré suite aux critères suivants :
 #PopUp
